[package]
name = "axum-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
axum = "0.6.20"
axum-test-helper = "0.3.0"
mime = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
tokio = { version = "1.32.0", features = ["full"] }
